Test: Add timestamp comment to index.html for auto-deploy verification

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -91,5 +91,6 @@
     <script src="js/api_client.js?v=1.0.1"></script>
     <script src="js/ui_handler.js?v=1.0.1"></script>
     <script src="js/app.js?v=1.0.1"></script>
+    <!-- Test auto-deploy on 2025-05-23 06:25 -->
 </body>
 </html> 
