feat: Comprehensive project optimization and frontend SEO improvements

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI Content Generator</title>
+    <meta name="description" content="Free AI Content Generator. Create stunning images and realistic audio from text prompts. Powered by advanced AI models, supporting prompt optimization, multiple aspect ratios, and high-quality output.">
+    <title>AI Content Generator - Free Text to Image & Audio</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -15,8 +16,8 @@
 
     <div class="container">
         <header>
-            <h1>AI Content Generator</h1>
-            <p>Generate images and audio from text</p>
+            <h1 data-i18n="mainTitle">Unleash Your Creativity with AI</h1>
+            <p data-i18n="subTitle">Generate stunning, high-quality images and audio from just a few words. Free, fast, and easy to use.</p>
         </header>
 
         <main>
