feat: add Google Analytics code to index.html

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,6 +6,15 @@
     <meta name="description" content="Nihilistic AI - Free AI Content Generator. Create stunning images and realistic audio from text prompts. Powered by advanced AI models, supporting prompt optimization, multiple aspect ratios, and high-quality output.">
     <title>Nihilistic AI - Free Text to Image & Audio</title>
     <link rel="stylesheet" href="css/style.css">
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-31NLQ5LM06"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-31NLQ5LM06');
+</script>
 </head>
 <body>
     <!-- 顶部导航栏 -->
