首页区块标题与footer版权全部大写NIHILISTIC AI，彻底统一品牌风格

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Nihilistic AI - Free AI Content Generator. Create stunning images and realistic audio from text prompts. Powered by advanced AI models, supporting prompt optimization, multiple aspect ratios, and high-quality output.">
-    <title>Nihilistic AI - Free Text to Image & Audio</title>
+    <meta name="description" content="NIHILISTIC AI - 免费AI图片生成与语音合成平台，支持中英文输入，永久免费，适合设计师、内容创作者和普通用户。AI图片生成、AI语音合成、文本转图片、文本转语音，一站式AI内容创作工具。">
+    <meta name="keywords" content="AI图片生成,AI语音合成,免费AI工具,内容创作,文本转图片,文本转语音,AI Content Generation,Text to Image,Text to Speech,Free AI">
+    <title>NIHILISTIC AI - 免费AI图片生成与语音合成 | Free Text to Image & Audio</title>
     <link rel="stylesheet" href="css/style.css">
     <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-31NLQ5LM06"></script>
@@ -15,12 +16,22 @@
 
   gtag('config', 'G-31NLQ5LM06');
 </script>
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebSite",
+      "name": "NIHILISTIC AI",
+      "url": "https://你的域名.com",
+      "description": "AI图片生成与语音合成平台，永久免费，支持中英文输入。",
+      "inLanguage": ["zh-CN", "en"]
+    }
+    </script>
 </head>
 <body>
     <!-- 顶部导航栏 -->
     <nav class="navbar">
         <div class="navbar-left">
-            <img src="assets/logo.svg" alt="Nihilistic AI Logo" class="logo-img" />
+            <img src="assets/logo.svg" alt="NIHILISTIC AI LOGO - 免费AI图片生成与语音合成" class="logo-img" />
             <span class="site-name">NIHILISTIC AI</span>
         </div>
         <ul class="navbar-menu">
@@ -42,8 +53,8 @@
     <section class="hero-section">
         <div class="hero-content">
             <div class="hero-row">
-                <img src="assets/logo.svg" alt="Nihilistic AI Logo" class="hero-logo-img" />
-                <h1 class="hero-title">Nihilistic AI</h1>
+                <img src="assets/logo.svg" alt="NIHILISTIC AI LOGO - 免费AI图片生成与语音合成" class="hero-logo-img" />
+                <h1 class="hero-title">NIHILISTIC AI - 免费AI图片生成与语音合成平台</h1>
             </div>
             <p class="hero-subtitle">图片·语音·无限免费生成</p>
             <div class="hero-tags">
@@ -158,7 +169,7 @@
         </main>
         <!-- 主要特性区块移动到footer前 -->
         <section class="features-section" id="features">
-            <h2 class="features-title">Nihilistic AI 的主要特性</h2>
+            <h2 class="features-title">NIHILISTIC AI 的主要特性 | MAIN FEATURES OF NIHILISTIC AI</h2>
             <div class="features-grid">
                 <div class="feature-card"><span class="feature-icon">💸</span><h3>零成本创作</h3><p>完全免费，无需注册，无限生成。</p></div>
                 <div class="feature-card"><span class="feature-icon">🧠</span><h3>最先进的质量</h3><p>高分辨率，细节丰富，艺术风格多样。</p></div>
@@ -196,8 +207,8 @@
     <div id="about-modal" class="modal" style="display:none;">
       <div class="modal-content">
         <span class="close" id="about-modal-close">&times;</span>
-        <h2>关于 Nihilistic AI</h2>
-        <p>Nihilistic AI 是一个集成了文本生成图片与语音的智能工具平台，致力于为用户提供高效、便捷、免费的AI内容创作体验。<br><br>
+        <h2>关于 NIHILISTIC AI</h2>
+        <p>NIHILISTIC AI 是一个集成了文本生成图片与语音的智能工具平台，致力于为用户提供高效、便捷、免费的AI内容创作体验。<br><br>
 无论你是设计师、内容创作者，还是普通用户，只需输入一句描述，就能一键生成高质量的图片或语音。平台支持中英文输入，内置智能优化和多种生成参数，满足多样化的创作需求。<br><br>
 本项目基于先进的AI模型，结合云端算力，保证生成速度与质量。所有功能永久免费开放，界面简洁友好，适配多终端设备，助力每一位用户释放创意灵感。</p>
       </div>
@@ -208,7 +219,7 @@
       <div class="modal-content">
         <span class="close" id="contact-modal-close">&times;</span>
         <h2>联系我们</h2>
-        <p>如果您在使用 Nihilistic AI 的过程中有任何问题或建议，欢迎随时与我们联系！<br><br>
+        <p>如果您在使用 NIHILISTIC AI 的过程中有任何问题或建议，欢迎随时与我们联系！<br><br>
         <b>产品反馈与建议：</b>我们非常重视您的体验和意见，任何功能建议或改进想法都欢迎反馈。<br>
         <b>技术支持：</b>遇到技术问题或使用障碍，请详细描述您的问题，我们会尽快协助解决。<br><br>
         您可以通过以下方式联系我们：<br>
