--- a/frontend/index.html
+++ b/frontend/index.html
@@ -115,6 +115,8 @@
                             <option value="4:3" data-width="1024" data-height="768">Standard (4:3 - 1024x768)</option>
                             <option value="3:4" data-width="768" data-height="1024">Standard Vertical (3:4 - 768x1024)</option>
                             <option value="custom">Custom Dimensions</option>
+                            <option value="16:9-2k" data-width="2560" data-height="1440">Landscape 2K (16:9 - 2560x1440)</option>
+                            <option value="9:16-2k" data-width="1440" data-height="2560">Portrait 2K (9:16 - 1440x2560)</option>
                         </select>
                     </div>
                     <div id="custom-dimensions-container" style="display:none;">
