修正GA4统计代码为G-TYWK2W77L4，确保数据采集正常

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,13 +8,13 @@
     <title>NIHILISTIC AI - 免费AI图片生成与语音合成 | Free Text to Image & Audio</title>
     <link rel="stylesheet" href="css/style.css">
     <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-31NLQ5LM06"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-TYWK2W77L4"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-31NLQ5LM06');
+  gtag('config', 'G-TYWK2W77L4');
 </script>
     <script type="application/ld+json">
     {
