--- a/frontend/index.html
+++ b/frontend/index.html
@@ -21,7 +21,7 @@
       "@context": "https://schema.org",
       "@type": "WebSite",
       "name": "NIHILISTIC AI",
-      "url": "https://你的域名.com",
+      "url": "https://nihilistic.dpdns.org",
       "description": "AI图片生成与语音合成平台，永久免费，支持中英文输入。",
       "inLanguage": ["zh-CN", "en"]
     }
