feat(seo): 首页SEO优化，新增Slogan、FAQ区块、结构化FAQ、Fazier启动徽章

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="NIHILISTIC AI - 免费AI图片生成与语音合成平台，支持中英文输入，永久免费，适合设计师、内容创作者和普通用户。AI图片生成、AI语音合成、文本转图片、文本转语音，一站式AI内容创作工具。">
-    <meta name="keywords" content="AI图片生成,AI语音合成,免费AI工具,内容创作,文本转图片,文本转语音,AI Content Generation,Text to Image,Text to Speech,Free AI">
+    <meta name="description" content="NIHILISTIC AI - 免费AI图片生成与语音合成平台，AI驱动，永久免费，无需登录，支持中英文输入，适合设计师、内容创作者和普通用户。AI图片生成、AI语音合成、文本转图片、文本转语音，一站式AI内容创作工具。">
+    <meta name="keywords" content="AI图片生成,AI语音合成,免费AI工具,内容创作,文本转图片,文本转语音,AI Content Generation,Text to Image,Text to Speech,AI生成艺术,AI创作,AI Slogan,Free AI">
     <title>NIHILISTIC AI - 免费AI图片生成与语音合成 | Free Text to Image & Audio</title>
     <link rel="stylesheet" href="css/style.css">
     <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-X8QYXG63G3"></script>
+<a href="https://fazier.com/launches/nihilistic.dpdns.org" target="_blank"><img src="https://fazier.com/api/v1//public/badges/launch_badges.svg?badge_type=launched&theme=light" width=120 alt="Fazier badge" /></a>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
@@ -24,6 +25,41 @@
       "url": "https://nihilistic.dpdns.org",
       "description": "AI图片生成与语音合成平台，永久免费，支持中英文输入。",
       "inLanguage": ["zh-CN", "en"]
+    }
+    
+    </script>
+    <!-- FAQ结构化数据 -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "FAQPage",
+      "mainEntity": [
+        {
+          "@type": "Question",
+          "name": "NIHILISTIC AI 是否永久免费？",
+          "acceptedAnswer": { "@type": "Answer", "text": "是的，平台所有功能永久免费，无需注册，无次数限制。" }
+        },
+        {
+          "@type": "Question",
+          "name": "使用平台需要登录吗？",
+          "acceptedAnswer": { "@type": "Answer", "text": "无需登录，直接输入描述即可生成图片或语音。" }
+        },
+        {
+          "@type": "Question",
+          "name": "支持哪些输入语言？",
+          "acceptedAnswer": { "@type": "Answer", "text": "支持中文和英文输入，界面可切换。" }
+        },
+        {
+          "@type": "Question",
+          "name": "生成的内容有版权吗？",
+          "acceptedAnswer": { "@type": "Answer", "text": "AI生成内容归用户所有，可自由使用。" }
+        },
+        {
+          "@type": "Question",
+          "name": "如何反馈问题或建议？",
+          "acceptedAnswer": { "@type": "Answer", "text": "可通过页面底部的联系方式或邮箱 support@nihilisticai.com 反馈。" }
+        }
+      ]
     }
     </script>
 </head>
@@ -57,6 +93,7 @@
                 <h1 class="hero-title">NIHILISTIC AI - 免费AI图片生成与语音合成平台</h1>
             </div>
             <p class="hero-subtitle">图片·语音·无限免费生成</p>
+            <div class="hero-slogan" style="font-size:1.25em;color:#00CFFF;margin:12px 0 0 0;">AI驱动·一键生成·释放你的创意！</div>
             <div class="hero-tags">
                 <span class="tag tag-free">100% 免费</span>
                 <span class="tag tag-unlimited">无限生成</span>
@@ -195,6 +232,19 @@
                 </div>
             </div>
         </footer>
+        <!-- 新增FAQ区块 -->
+        <section class="faq-section" style="background:#f8faff;padding:32px 0 24px 0;">
+            <div class="container">
+                <h2 style="text-align:center;font-size:1.6em;margin-bottom:18px;">常见问题 FAQ</h2>
+                <div class="faq-list" style="max-width:700px;margin:0 auto;">
+                    <div class="faq-item"><b>NIHILISTIC AI 是否永久免费？</b><br>是的，平台所有功能永久免费，无需注册，无次数限制。</div>
+                    <div class="faq-item"><b>使用平台需要登录吗？</b><br>无需登录，直接输入描述即可生成图片或语音。</div>
+                    <div class="faq-item"><b>支持哪些输入语言？</b><br>支持中文和英文输入，界面可切换。</div>
+                    <div class="faq-item"><b>生成的内容有版权吗？</b><br>AI生成内容归用户所有，可自由使用。</div>
+                    <div class="faq-item"><b>如何反馈问题或建议？</b><br>可通过页面底部的联系方式或邮箱 support@nihilisticai.com 反馈。</div>
+                </div>
+            </div>
+        </section>
     </div>
 
     <!-- 按依赖顺序加载脚本 -->
