fix(faq): 修正API接口相关FAQ内容，明确无对外API并中英文适配

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -258,7 +258,7 @@
                     </div>
                     <div class="faq-item" style="background:#262b35;border-radius:14px;box-shadow:0 2px 12px #0002;padding:22px 26px;min-height:110px;">
                         <div style="font-weight:bold;font-size:1.08em;margin-bottom:8px;color:#fff;" data-i18n="faqQ7">平台有API接口吗？</div>
-                        <div style="color:#e0e6f6;" data-i18n="faqA7">支持API调用，详见开发文档或联系客服获取API接入方式。</div>
+                        <div style="color:#e0e6f6;" data-i18n="faqA7">目前平台暂未对外开放API接口，敬请关注后续公告。如有需求可通过页面底部联系我们。</div>
                     </div>
                     <div class="faq-item" style="background:#262b35;border-radius:14px;box-shadow:0 2px 12px #0002;padding:22px 26px;min-height:110px;">
                         <div style="font-weight:bold;font-size:1.08em;margin-bottom:8px;color:#fff;" data-i18n="faqQ8">如何保护用户隐私？</div>
